--- a/flask/app.yaml
+++ b/flask/app.yaml
@@ -1,5 +1,4 @@
 runtime: python37
-api_version: 1
 
 runtime_config:
   python_version: 3
@@ -8,4 +7,4 @@ handlers:
 - url: /static
   static_dir: static
 - url: /.*
-  script: main.app
+  script: auto
